# MIPT_TP_Patterns

./: Game.cpp  Game.h  README.md  Units.h  main.cpp
game/: CMakeLists.txt  Game.cpp  Game.h  UnitFactories.cpp  UnitFactories.h  Units.h  main.cpp  tests.cpp
tests/: CMakeLists.txt  UnitFactories.cpp  UnitFactories.h  tests.cpp
